snake logic updated